chore: fixed searbar to look better on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
-
-*{
-margin: 0;
-box-sizing: border-box;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
-  
+
 .App {
   text-align: center;
- 
 }
-
 
 .App-header {
   background-color: #5e548e;
@@ -21,9 +18,8 @@ box-sizing: border-box;
   border-bottom: 3px solid #282c34;
 }
 
-
-.App-header button{
-   display: inline-block;
+.App-header button {
+  display: inline-block;
   padding: 0.375rem 0.75rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
@@ -32,8 +28,7 @@ box-sizing: border-box;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-    box-shadow 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .App-header button:hover {
@@ -45,20 +40,28 @@ box-sizing: border-box;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-
-
-
 @media (max-width: 600px) {
-  .movie-card {
-    width: 100%;
-  }
-
-  .search-bar {
+  .App-header {
     flex-direction: column;
     gap: 10px;
   }
 
-  .search-bar form {
+  .App-header button {
+    margin-bottom: 10px;
+  }
+
+  .search-bar {
+    width: 100%;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .search-bar form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
   }
 }
